# tiny-frpc

./: .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  CMakelists.txt  LICENSE  Makefile  README.md  bare_metal_porting_guide.md  embedded_stcp_shell_example.c  go.mod  go.sum  main.c  stcp_visitor_client_example.c
.github/workflows/: ci.yml  release.yml
bindings/: README.md
bindings/nodejs/: binding.gyp  frpc_native.c  frpc_node.js  test_e2e.js  test_smoke.js
bindings/python/: example_stcp_server.py  example_stcp_visitor.py  frpc_python.py  test_e2e.py  test_e2e_frps.py  test_smoke.py
bindings/rust/: build.rs
cmd/frpc_test/: coverage_flush_covflush.go  coverage_flush_stub.go  frpc_stcp.go  multi_channel.go  multi_channel_test.go
cmd/yamux_test/: README.md  basic.go  coverage_flush_covflush.go  interop.go  main_default.go  protocol.go  yamux_wrapper.c
core/: frpc.c  frpc.h  frpc_common.c  frpc_common.h  tcpmux.h  yamux.c  yamux.h
demo/p3/: README.md
demo/p3/rust/: Cargo.toml  test_p3.py
demo/stcp/: README.md  common.c  common.h  local_client.c  mock_frps.c  multi_stress.sh  stcp_server.c  stcp_visitor.c  stress_test.c
examples/: CMakeLists.txt  advanced_client.c  simple_client.c
hal/: conn_wrapper.c  conn_wrapper.h  wrapper.c  wrapper.h
include/: frpc.h  frpc_handler.h  frpc_internal.h  frpc_protocol.h  frpc_tcp_listener.h  frpc_visitor.h
release/bindings/: README.md
release/bindings/rust/: Cargo.toml
release/demo/: demo_stcp_frps  demo_stcp_local_client  demo_stcp_server  demo_stcp_visitor
release/include/: frpc-bindings.h  tools.h  wrapper.h
src/: dummy.c  frpc.c  frpc_handler.c  frpc_protocol.c  frpc_tcp_listener.c  frpc_visitor.c  yamux_wrapper.c
test/: yamux_test.c
tests/: coverage_check.py  test_crypto.c  test_edge_cases.c  test_error_handling.c  test_frpc_bindings_api.c  test_frpc_core_api.c  test_frpc_stcp_unit.c  test_multi_process.c  test_tools.c  test_tunnel_config.c  test_wrapper.c  test_yamux_unit.c
tests/c_tests/: CMakeLists.txt
tests/cgo_tests/: CMakeLists.txt  Makefile  (+11 more)
tiny-frpc/: DESIGN.md  FRP-PROTOCOL.md  FRP-STCP.md  LOGIC.md  STAGE.md  YAMUX.md
(+31 files in other folders)
