[package]
name = "frpc-rs"
version = "0.1.0"
edition = "2021"
authors = ["TINY-FRPC Contributors"]
description = "Rust bindings for TINY-FRPC - A lightweight FRP client library"
license = "MIT"
repository = "https://github.com/jifanchn/tiny-frpc"
keywords = ["frp", "tunnel", "proxy", "network"]
categories = ["network-programming", "api-bindings"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[lib]
name = "frpc_rs"
crate-type = ["rlib", "cdylib"]

[features]
# Example-only: if you want to enable ctrlc support in examples, add the dependency and enable this feature.
ctrlc = []

[[example]]
name = "stcp_server"
path = "examples/stcp_server.rs"

[[example]]
name = "stcp_visitor"
path = "examples/stcp_visitor.rs"